# AML_Project

./: README.md  base.h  encoder.h  flip.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  network_helper.cpp  network_helper.h  otp.h  pad_key.cpp
fits_file_viewer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
fits_file_viewer/Sample_Fits/: M51_blue.fit  M51_green.fit  M51_red.fit  ReadMe.txt
message_encryption/: base.cpp  composite_encoder.cpp  composite_encoder.h  encoder.cpp  encoder_factory.cpp  encoder_factory.h  flip.h  invert.cpp  invert.h  mainwindow.h  otp.cpp  pad_key.h  string_encryption.pro
